Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /hodr/*
            pathType: Prefix
            backend:
              service:
                name: hodor-service
                port:
                  number: 8080
          - path: /bran/*
            pathType: Prefix
            backend:
              service:
                name: bran-service
                port:
                  number: 8000
